<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/aboutLayout"
        tools:context=".IntervalTableActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:navigationIcon="@drawable/ic_baseline_dehaze_24"
            app:title="Tips and Suggestions"
            android:id="@+id/toolbarAbout"
            app:titleTextColor="#DFBD0A"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarAbout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:src="@drawable/p1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p1"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="#272727"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/p2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p2"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="#272727"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/p3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p3"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="#272727"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p4"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="#272727"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p5"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p5"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="#272727"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p6"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p6"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="#272727"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p7"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p7"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="#272727"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p8"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p8"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="#272727"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/p9"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/p9"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColor="#272727"/>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationViewAbout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_drawer"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>