<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawerlayoutaboutapp"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutApp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:navigationIcon="@drawable/ic_baseline_dehaze_24"
            app:title="About App"
            android:id="@+id/aboutToolbar"
            app:titleTextColor="#DFBD0A"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_below="@+id/aboutToolbar"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Q.1 What is the purpose of this app?"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q2desc"
                    android:textColor="#C8000000"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="10dp"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Q.2 How we get the idea about this particular app?"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#C8000000"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="10dp"
                    android:text="@string/q3desc" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Q.3 About the contents of app"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q4desc"
                    android:textColor="#C8000000"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationviewaboutapp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/menu_drawer"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>